# har-analyser

./: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  lint.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: README.txt
src-tauri/src/: main.rs
src/components/ui/: dialog.tsx
