[package]
name = "har-analyser"
version = "0.1.0"
description = "HAR file analyzer application"
authors = ["Callum Teesdale"]
license = "MIT"
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["shell-open", "dialog-all", "fs-all", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
