[package]
name = "har-analyser"
version = "0.1.0"
description = "HAR file analyzer application"
authors = ["Callum Teesdale"]
license = "MIT"
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
